// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Segmented > render options 1`] = `
<div
  aria-label="segmented control"
  class="ant-segmented"
  role="listbox"
>
  <div
    class="ant-segmented-group"
  >
    <label
      class="ant-segmented-item ant-segmented-item-selected"
    >
      <input
        checked=""
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        aria-selected="true"
        class="ant-segmented-item-label"
        role="option"
        title="Daily"
      >
        Daily
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        aria-selected="false"
        class="ant-segmented-item-label"
        role="option"
        title="Weekly"
      >
        Weekly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        aria-selected="false"
        class="ant-segmented-item-label"
        role="option"
        title="Monthly"
      >
        Monthly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        aria-selected="false"
        class="ant-segmented-item-label"
        role="option"
        title="Quarterly"
      >
        Quarterly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        aria-selected="false"
        class="ant-segmented-item-label"
        role="option"
        title="Yearly"
      >
        Yearly
      </div>
    </label>
  </div>
</div>
`;

exports[`Segmented > render options with ellipsis 1`] = `
<div
  aria-label="segmented control"
  class="ant-segmented ant-segmented-block"
  role="listbox"
>
  <div
    class="ant-segmented-group"
  >
    <label
      class="ant-segmented-item ant-segmented-item-selected"
    >
      <input
        checked=""
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        aria-selected="true"
        class="ant-segmented-item-label"
        role="option"
        title="123"
      >
        123
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        aria-selected="false"
        class="ant-segmented-item-label"
        role="option"
        title="456"
      >
        456
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        aria-selected="false"
        class="ant-segmented-item-label"
        role="option"
      >
        <span
          class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line"
        >
          longtext
        </span>
      </div>
    </label>
  </div>
</div>
`;
